--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,103 +15,122 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jvm_flag: 
+          - name: MaxRAM                      # TEST 1: RAM
+            flags: "-XX:MaxRAM=2g" 
+          - name: GCLogging                   # TEST 2: Garbage Collection Logging
+            flags: "-Xlog:gc*:file=gc.log" 
+          - name: ReservedCodeCache           # TEST 3: Code Cache
+            flags: "-XX:ReservedCodeCacheSize=1024M" 
+          - name: UseG1GC                     # TEST 4: Garbage Collector
+            flags: "-XX:+UseG1GC" 
+          - name: PrintCompilation            # TEST 5: Compilation Logging
+            flags: "-XX:+PrintCompilation" 
+          - name: HeapDumpOnOutOfMemoryError  # TEST 6: Heap Dump On Out Of Memory Error
+            flags: "-XX:+HeapDumpOnOutOfMemoryError" 
+          - name: UseStringDeduplication      # TEST 7: String Deduplication Performance
+            flags: "-XX:+UseStringDeduplication"
+    name: Build with ${{ matrix.jvm_flag.name }} Flag
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-java@v4.2.1
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        cache: 'maven'
+      - uses: actions/setup-java@v4.2.1
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
 
-    - name: Build and Test with Maven
-      timeout-minutes: 15
-      run: ./mvnw -B verify
+      # === Standard Build and Test ===
+      - name: Build and Test with Maven
+        timeout-minutes: 15
+        run: ./mvnw -B verify
 
-    - name: Get JaCoCo Coverage
-      id: coverage  
-      run: |
-        coverage=$(python3 config/coverage.py target/site/jacoco/jacoco.csv) 
-        echo "COVERAGE=$coverage" >> $GITHUB_ENV
+      - name: Get JaCoCo Coverage
+        id: coverage
+        run: |
+          coverage=$(python3 config/coverage.py target/site/jacoco/jacoco.csv)
+          echo "COVERAGE=${coverage}" >> $GITHUB_ENV
 
-    - name: Fail if coverage has not improved.
-      run: |
-        coverage=$COVERAGE
-        threshold=24.46
-        if (( $(echo "$coverage - $threshold <= 0.1" | bc -l) )); then
-          echo "Coverage is not improved."
-          exit 1
-        else
-          echo "New coverage: $coverage%. Coverage is improved!"
-        fi
+      - name: Fail if coverage has not improved.
+        run: |
+          coverage=${COVERAGE}
+          threshold=24.46
+          if (( $(echo "$coverage - $threshold <= 0.1" | bc -l) )); then
+            echo "Coverage is not improved."
+            exit 1
+          else
+            echo "New coverage: $coverage%. Coverage is improved!"
+          fi
 
-    ### ========== TEST NUM 1 RAM TEST   ==========  
-          
-    - name: Run build with MaxRAM flag
-      run: |
-        export MAVEN_OPTS="-XX:MaxRAM=2g"  # Set MaxRAM flag
-        mvn clean install  # Run Maven build
-        
-    # Check if the compilation was successful with 2GB RAM
-    - name: Check if build was successful with 2GB RAM
-      if: success()  
-      run: echo "The build with 2GB RAM was successful."
+      # === JVM Flag Tests ===
 
-    # Check error
-    - name: Handle failure
-      if: failure()  
-      run: echo "Build with 2GB RAM failed."
+      - name: Set JVM Flags
+        run: echo "MAVEN_OPTS=${{ matrix.jvm_flag.flags }}" >> $GITHUB_ENV
 
-    ### ========== TEST NUM 2 HEAP  USE   ========== 
-          
-    - name: Run build to get Garbage Collector information
-      run: |
-        export MAVEN_OPTS="-Xlog:gc*:file=gc.log"  # Get GC information 
-        mvn clean install  # Run Maven build
+      - name: Run Maven Build with JVM Flag
+        run: |
+          echo "Using MAVEN_OPTS: $MAVEN_OPTS"
+          mvn clean install
 
-    - name: Run Bash Script to Get GC Info
-      run: |
-        chmod +x ./tests_scripts/search_gc_info.sh
-        ./tests_scripts/search_gc_info.sh
+      - name: Handle GCLogging Specific Script
+        if: matrix.jvm_flag.name == 'GCLogging'
+        run: |
+          chmod +x ./tests_scripts/search_gc_info.sh
+          ./tests_scripts/search_gc_info.sh
 
-    ### ========== TEST NUM 3 CACHE TEST   ========== 
-          
-    - name: Run build with Max Cahce flag
-      run: |
-        export MAVEN_OPTS="-XX:ReservedCodeCacheSize=1024M"  
-        mvn clean install  # Run Maven build
-            
-    # Check if the compilation was successful with 1024M Cache
-    - name: Check if build was successful with 1024M Cache
-      if: success()  
-      run: echo "The build with 1024M Cache was successful."
+      - name: Check if build was successful with ${{ matrix.jvm_flag.name }}
+        if: success()
+        run: echo "The build with ${{ matrix.jvm_flag.name }} was successful."
 
-    # Check error
-    - name: Handle failure
-      if: failure()  
-      run: echo "Build with 1024M Cache failed."
+      - name: Handle failure for ${{ matrix.jvm_flag.name }}
+        if: failure()
+        run: echo "Build with ${{ matrix.jvm_flag.name }} failed."
 
-    ### ========== TEST NUM 4 64 vs 32 bits architecture   ========== 
-    
-    # First run with 1024M Words (64 bits)
-    - name: Run build with 1024M Words flag
-      run: |
-        export MAVEN_OPTS="-XX:+UnlockDiagnosticVMOptions -XX:MallocMaxTestWords=1024M"
-        mvn clean install 
-        echo "success" > results.log || echo "failure" > results.log                                  # Save results on file
-        echo "The build with 1024M Words was successful." || echo "Build with 1024M Words failed."    # Show results on screen
-      continue-on-error: true
+      # === Collect Build Logs ===
+      - name: Collect Build Logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-logs-${{ matrix.jvm_flag.name }}
+          path: |
+            target/surefire-reports/
+            target/jacoco/
+            gc.log
+            results.log
+            *.hprof  # Include heap dump files (only if generated, see HeapDumpOnOutOfMemoryError)
 
-    # Second run with 64M Words (half)
-    - name: Run build with 512M Words flag
-      run: |
-        export MAVEN_OPTS="-XX:+UnlockDiagnosticVMOptions -XX:MallocMaxTestWords=512M"
-        mvn clean install 
-        echo "success" > results.log || echo "failure" > results.log                                  # Save results on file
-        echo "The build with 512M Words was successful." || echo "Build with 512M Words failed."    # Show results on screen
-      continue-on-error: true
+  post_build:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Check build results and print conclusion
-      run: |
-        chmod +x ./tests_scripts/check_results.sh  
-        ./tests_scripts/check_results.sh  
+      - name: Download All Build Logs
+        uses: actions/download-artifact@v3
+        with:
+          name: build-logs-*
+          path: ./build-logs
+
+      - name: Aggregate Coverage Metrics
+        run: |
+          echo "Coverage Metrics per JVM Flag:"
+          for file in ./build-logs/*/jacoco.csv; do
+            if [ -f "$file" ]; then
+              coverage=$(python3 config/coverage.py "$file")
+              flag=$(basename $(dirname "$file"))
+              echo "$flag: $coverage%"
+            fi
+          done
+
+      ### ========== HUMOUR ==========
+      - name: Add Humorous Comment
+        run: |
+          echo "Déboguer, c'est comme être le détective dans un film policier où vous êtes aussi le meurtrier." >> ./humour.txt
+
+      - name: Upload Humorous Comment
+        uses: actions/upload-artifact@v3
+        with:
+          name: Humour
+          path: ./humour.txt
